@@ -6,6 +6,8 @@ import dat3.kino.dto.MovieOmdbResponse;
 import dat3.kino.entity.*;
 import dat3.kino.repository.*;
 import dat3.kino.service.MovieService;
+import dat3.security.entity.UserWithRoles;
+import dat3.security.repository.UserWithRolesRepository;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
@@ -37,8 +39,10 @@ public class InitData implements ApplicationRunner {
     private final SeatRepository seatRepository;
 
     private final PriceClassRepository priceClassRepository;
+    private final UserWithRolesRepository userWithRolesRepository;
 
-    public InitData(PriceClassRepository priceClassRepository,
+    public InitData( UserWithRolesRepository userWithRolesRepository,
+            PriceClassRepository priceClassRepository,
             SeatRepository seatRepository, ReservationRepository reservationRepository, MovieRepository movieRepository, HallRepository hallRepository, ShowingRepository showingRepository, CinemaRepository cinemaRepository, OmdbFacade omdbFacade, MovieService movieService) {
         this.movieRepository = movieRepository;
         this.hallRepository = hallRepository;
@@ -49,6 +53,7 @@ public class InitData implements ApplicationRunner {
         this.movieService = movieService;
         this.seatRepository = seatRepository;
         this.priceClassRepository = priceClassRepository;
+        this.userWithRolesRepository = userWithRolesRepository;
     }
 
     @Override
@@ -119,12 +124,12 @@ public class InitData implements ApplicationRunner {
                // Creating showings for cinema 1, hall 1
 
                // Creating showings for cinema 1, hall 1
-               Showing showing1 = new Showing(movie1, hall1, LocalDateTime.of(2024, 3, 14, 10, 0), true, false, 10.0);
-               Showing showing2 = new Showing(movie2, hall1, LocalDateTime.of(2024, 4, 15, 10, 0), true, false, 12.0);
+               Showing showing1 = new Showing(movie1, hall1, LocalDateTime.of(2024, 3, 14, 10, 0), true, false);
+               Showing showing2 = new Showing(movie2, hall1, LocalDateTime.of(2024, 4, 15, 10, 0), true, false);
 
                // Creating showings for cinema 1, hall 2
-               Showing showing3 = new Showing(movie2, hall2, LocalDateTime.of(2024, 2, 16, 11, 0), false, true, 15.0);
-               Showing showing4 = new Showing(movie1, hall2, LocalDateTime.of(2024, 5, 18, 14, 0), false, false, 8.0);
+               Showing showing3 = new Showing(movie2, hall2, LocalDateTime.of(2024, 2, 16, 11, 0), false, true);
+               Showing showing4 = new Showing(movie1, hall2, LocalDateTime.of(2024, 5, 18, 14, 0), false, false);
 //
 //              // Creating showings for cinema 2, hall 1
 //              Showing showing5 = new Showing(movie5, hall3, 0, 7200, true, false, 12.0);
@@ -171,16 +176,18 @@ public class InitData implements ApplicationRunner {
         Seat seat4 = seatRepository.findById(4L).orElseThrow(() -> new RuntimeException("Seat not found"));
         System.out.println(seat1 +" " + seat2 + " " + seat3 + " " + seat4);
 
-//        Reservation reservation1 = new Reservation(showing1, 100,List.of(seat1));
-//               Reservation reservation2 = new Reservation(showing2, 100, List.of(seat2));
+//        UserWithRoles user = userWithRolesRepository.findById("user1").orElseThrow(() -> new RuntimeException("User not found"));
 //
-//               Reservation reservation3 = new Reservation(showing3, 100, List.of(seat3));
-//               Reservation reservation4 = new Reservation(showing4, 100, List.of(seat4));
-//
-//               //     save the reservations
-//               reservationRepository.saveAll(Arrays.asList(reservation1, reservation2,
-//                       reservation3, reservation4
-//               ));
+        Reservation reservation1 = new Reservation(showing1, 100,List.of(seat1));
+               Reservation reservation2 = new Reservation(showing2, 200, List.of(seat2));
+
+               Reservation reservation3 = new Reservation(showing3, 300, List.of(seat3));
+               Reservation reservation4 = new Reservation(showing4, 400, List.of(seat4));
+
+               //     save the reservations
+               reservationRepository.saveAll(Arrays.asList(reservation1, reservation2,
+                       reservation3, reservation4
+               ));
            }
 }
 
